--- a/less/index.less
+++ b/less/index.less
@@ -6,6 +6,10 @@ v2.0b1 | 201101
 NOTE:WORK IN PROGRESS
 USE WITH CAUTION AND TEST WITH ABANDON */
 
+*{
+  box-sizing: border-box;
+}
+
 html,body,div,span,applet,object,iframe,
 h1,h2,h3,h4,h5,h6,p,blockquote,pre,
 a,abbr,acronym,address,big,cite,code,
@@ -22,7 +26,7 @@ time,mark,audio,video{
   padding:0;
   border:0;
   outline:0;
-  font-size:100%;
+  font-size:62.5%;
   font:inherit;
   vertical-align:baseline;
 }
@@ -58,3 +62,40 @@ table{
 }
 
 /* Your Code Goes Here */
+body {
+  max-width: 880px;
+  margin: 0 auto;
+}
+
+header {
+  display: flex;
+  border: 1px solid red;
+  justify-content: space-between;
+
+  nav a {
+    text-decoration: none;
+    color: black;
+  }
+}
+
+// intro section
+.intro {
+  height: 598px;
+  border: 1px solid red;
+  background-image: url(../img/home/home-jumbotron.png);
+  background-size: cover;
+  background-repeat: none;
+  position: relative;
+
+  .intro-content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 6%;
+
+    h2 {
+      font-size: 3.5rem;
+      color: white;
+    }
+  }
+}
