--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,9 @@ NOTE:WORK IN PROGRESS
 USE WITH CAUTION AND TEST WITH ABANDON */
 * {
   box-sizing: border-box;
+  font-family: 'Roboto', 'Arial', 'sans-serif';
+  font-weight: 500;
+  line-height: 2.4rem;
 }
 html,
 body,
@@ -141,18 +144,26 @@ body {
   max-width: 880px;
   margin: 0 auto;
 }
+.home {
+  border: 1px solid black;
+}
 header {
   display: flex;
-  border: 1px solid red;
   justify-content: space-between;
+  background-color: #979CA1;
+  color: white;
+  padding: 2%;
 }
-header nav a {
-  text-decoration: none;
-  color: black;
+header p {
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+header .logo {
+  font-weight: bold;
+  font-size: 2.4rem;
 }
 .intro {
   height: 598px;
-  border: 1px solid red;
   background-image: url(../img/home/home-jumbotron.png);
   background-size: cover;
   background-repeat: none;
@@ -162,9 +173,35 @@ header nav a {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 6%;
+  padding: 2%;
 }
-.intro .intro-content h2 {
+.intro .intro-content h1 {
   font-size: 3.5rem;
+  font-weight: bold;
   color: white;
+}
+.learn-top {
+  margin-top: 4%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.learn-top .content {
+  width: 410px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.learn-top .content h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 4%;
+}
+.learn-top .content p {
+  margin-bottom: 4%;
+}
+.learn-top .content button {
+  background: white;
+  border: 1px solid black;
+  width: 8rem;
 }
