--- a/less/index.less
+++ b/less/index.less
@@ -122,7 +122,37 @@ header {
   flex-direction: row;
   justify-content: space-around;
 
-  .content {
+  .top-content {
+    width: 410px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+    h3 {
+      font-size: 1.5rem;
+      font-weight: bold;
+      margin-bottom: 4%;
+    }
+    
+    p {
+      margin-bottom: 4%;
+    }
+
+    button {
+      background: white;
+      border: 1px solid black;
+      width: 8rem;
+    }
+  }
+}
+
+.learn-bottom {
+  margin-top: 4%;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+
+  .bottom-content {
     width: 410px;
     display: flex;
     justify-content: center;
