--- a/less/index.less
+++ b/less/index.less
@@ -116,6 +116,7 @@ header {
   }
 }
 
+// How can I make container full width(p-tag)
 .learn-top {
   margin-top: 4%;
   display: flex;
@@ -154,9 +155,11 @@ header {
 
   .bottom-content {
     width: 410px;
+    max-width: 100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
+    // border: 1px solid red;
 
     h3 {
       font-size: 1.5rem;
@@ -173,5 +176,98 @@ header {
       border: 1px solid black;
       width: 8rem;
     }
+  }
+}
+
+.recent-projects {
+  margin-top: 8%;
+  height: 230px;
+// Villas project
+  h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  .villas {
+    height: 100%;
+    margin-top: 4%;
+    background-image: url(../img/home/home-villas-img.png);
+    background-size: cover;
+    background-repeat: none;
+    position: relative;
+    margin-bottom: 4%;
+    border: 1px solid red;
+
+    .square {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      border: 1px solid black;
+      align-content: baseline;
+    }
+  }
+
+  .villa-description {
+   margin: 0 auto;
+   width: 50%;
+  }
+
+  // Outskirts project
+  h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  .outskirts {
+    height: 100%;
+    margin-top: 4%;
+    background-image: url(../img/home/home-outskirts-img.png);
+    background-size: cover;
+    background-repeat: none;
+    position: relative;
+    margin-bottom: 4%;
+    border: 1px solid red;
+
+    .square {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      border: 1px solid black;
+      align-content: baseline;
+    }
+  }
+
+  .outskirts-description {
+   margin: 0 auto;
+   width: 50%;
+  }
+  // The Blocks
+  h2 {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  .blocks {
+    height: 100%;
+    margin-top: 4%;
+    background-image: url(../img/home/home-the-blocks-img.png);
+    background-size: cover;
+    background-repeat: none;
+    position: relative;
+    margin-bottom: 4%;
+    border: 1px solid red;
+
+    .square {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      border: 1px solid black;
+      align-content: baseline;
+    }
+  }
+
+  .blocks-description {
+   margin: 0 auto;
+   width: 50%;
   }
 }
