started from scratch, finished homepage desktop

--- a/less/index.less
+++ b/less/index.less
@@ -1,273 +1,16 @@
-/*------------------------------------*\
-RESET
-\*------------------------------------*/
-/* http://meyerweb.com/eric/tools/css/reset/ 
-v2.0b1 | 201101 
-NOTE:WORK IN PROGRESS
-USE WITH CAUTION AND TEST WITH ABANDON */
+// Variables and Mixins
+// @import 'variables.less';
+// @import 'mixins.less';
 
-*{
-  box-sizing: border-box;
-  font-family: 'Roboto', 'Arial', 'sans-serif';
-  font-weight: 500;
-  line-height: 2.4rem;
+// Reset and Global Styles
+@import 'reset.less';
+// @import 'global.less';
 
-}
+// Reusable Components;
+@import 'navigation.less';
+@import 'footer.less';
 
-html,body,div,span,applet,object,iframe,
-h1,h2,h3,h4,h5,h6,p,blockquote,pre,
-a,abbr,acronym,address,big,cite,code,
-del,dfn,em,img,ins,kbd,q,s,samp,
-small,strike,strong,sub,sup,tt,var,
-b,u,i,center,
-dl,dt,dd,ol,ul,li,
-fieldset,form,label,legend,
-table,caption,tbody,tfoot,thead,tr,th,td,
-article,aside,canvas,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section,summary,
-time,mark,audio,video{
-  margin:0;
-  padding:0;
-  border:0;
-  outline:0;
-  font-size:62.5%;
-  font:inherit;
-  vertical-align:baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section{
-  display:block;
-}
-body{
-  line-height:1;
-}
-ol,ul{
-  list-style:none;
-}
-blockquote,q{
-  quotes:none;
-}
-blockquote:before,blockquote:after,
-q:before,q:after{
-  content:’’;
-  content:none;
-}
-ins{
-  text-decoration:none;
-}
-del{
-  text-decoration:line-through;
-}
-
-table{
-  border-collapse:collapse;
-  border-spacing:0;
-}
-
-/* Your Code Goes Here */
-
-body {
-  max-width: 880px;
-  margin: 0 auto;
-}
-
-.home {
-  border: 1px solid black;
-}
-
-header {
-  display: flex;
-  justify-content: space-between;
-  background-color: #979CA1;
-  color: white;
-  padding: 2%;
-
-  p {
-    font-weight: bold;
-    font-size: 1.8rem;
-  }
-
-  .logo {
-    font-weight: bold;
-    font-size: 2.4rem;
-  }
-}
-
-// intro section
-.intro {
-  height: 598px;
-  background-image: url(../img/home/home-jumbotron.png);
-  background-size: cover;
-  background-repeat: none;
-  position: relative;
-
-  .intro-content {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    padding: 2%;
-
-    h1 {
-      font-size: 3.5rem;
-      font-weight: bold;
-      color: white;
-    }
-  }
-}
-
-// How can I make container full width(p-tag)
-.learn-top {
-  margin-top: 4%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-
-  .top-content {
-    width: 410px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-
-    h3 {
-      font-size: 1.5rem;
-      font-weight: bold;
-      margin-bottom: 4%;
-    }
-    
-    p {
-      margin-bottom: 4%;
-    }
-
-    button {
-      background: white;
-      border: 1px solid black;
-      width: 8rem;
-    }
-  }
-}
-
-.learn-bottom {
-  margin-top: 4%;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-around;
-
-  .bottom-content {
-    width: 410px;
-    max-width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    // border: 1px solid red;
-
-    h3 {
-      font-size: 1.5rem;
-      font-weight: bold;
-      margin-bottom: 4%;
-    }
-    
-    p {
-      margin-bottom: 4%;
-    }
-
-    button {
-      background: white;
-      border: 1px solid black;
-      width: 8rem;
-    }
-  }
-}
-
-.recent-projects {
-  margin-top: 8%;
-  height: 230px;
-// Villas project
-  h2 {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-
-  .villas {
-    height: 100%;
-    margin-top: 4%;
-    background-image: url(../img/home/home-villas-img.png);
-    background-size: cover;
-    background-repeat: none;
-    position: relative;
-    margin-bottom: 4%;
-    border: 1px solid red;
-
-    .square {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      border: 1px solid black;
-      align-content: baseline;
-    }
-  }
-
-  .villa-description {
-   margin: 0 auto;
-   width: 50%;
-  }
-
-  // Outskirts project
-  h2 {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-
-  .outskirts {
-    height: 100%;
-    margin-top: 4%;
-    background-image: url(../img/home/home-outskirts-img.png);
-    background-size: cover;
-    background-repeat: none;
-    position: relative;
-    margin-bottom: 4%;
-    border: 1px solid red;
-
-    .square {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      border: 1px solid black;
-      align-content: baseline;
-    }
-  }
-
-  .outskirts-description {
-   margin: 0 auto;
-   width: 50%;
-  }
-  // The Blocks
-  h2 {
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-
-  .blocks {
-    height: 100%;
-    margin-top: 4%;
-    background-image: url(../img/home/home-the-blocks-img.png);
-    background-size: cover;
-    background-repeat: none;
-    position: relative;
-    margin-bottom: 4%;
-    border: 1px solid red;
-
-    .square {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      border: 1px solid black;
-      align-content: baseline;
-    }
-  }
-
-  .blocks-description {
-   margin: 0 auto;
-   width: 50%;
-  }
-}
+// Page Specific
+@import 'home.less';
+// @import 'services.less';
+// @import 'contact.less';
