--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,7 @@
-/*------------------------------------*\
-RESET
-\*------------------------------------*/
 /* http://meyerweb.com/eric/tools/css/reset/ 
-v2.0b1 | 201101 
-NOTE:WORK IN PROGRESS
-USE WITH CAUTION AND TEST WITH ABANDON */
-* {
-  box-sizing: border-box;
-  font-family: 'Roboto', 'Arial', 'sans-serif';
-  font-weight: 500;
-  line-height: 2.4rem;
-}
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 html,
 body,
 div,
@@ -76,23 +67,26 @@ article,
 aside,
 canvas,
 details,
-figcaption,
+embed,
 figure,
+figcaption,
 footer,
 header,
 hgroup,
 menu,
 nav,
+output,
+ruby,
 section,
 summary,
 time,
 mark,
 audio,
 video {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
   border: 0;
-  outline: 0;
   font-size: 62.5%;
   font: inherit;
   vertical-align: baseline;
@@ -113,6 +107,8 @@ section {
 }
 body {
   line-height: 1;
+  max-width: 880px;
+  margin: 0 auto;
 }
 ol,
 ul {
@@ -126,187 +122,269 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: ’’;
+  content: '';
   content: none;
-}
-ins {
-  text-decoration: none;
-}
-del {
-  text-decoration: line-through;
 }
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-/* Your Code Goes Here */
-body {
-  max-width: 880px;
-  margin: 0 auto;
+a {
+  text-decoration: none;
 }
-.home {
-  border: 1px solid black;
-}
-header {
+.nav {
+  width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   background-color: #979CA1;
-  color: white;
   padding: 2%;
+  color: white;
 }
-header p {
+.nav h2 {
   font-weight: bold;
   font-size: 1.8rem;
 }
-header .logo {
+.nav a {
+  color: white;
+}
+.nav nav {
+  display: none;
+}
+.nav .nav-btn {
+  width: 3.2rem;
+  height: 2.1rem;
+  background-image: url('../img/nav-hamburger.png');
+  background-repeat: none;
+  background-size: cover;
+}
+footer {
+  background-color: #818181;
+  padding: 4%;
+  display: flex;
+  flex-direction: column;
+  color: white;
+}
+footer h4 {
+  font-size: 1.4rem;
   font-weight: bold;
-  font-size: 2.4rem;
+}
+footer .footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+footer .contact {
+  width: 40%;
+}
+footer input {
+  width: 80%;
+  height: 30px;
+  padding: 5px 0;
+  margin: 10px 0;
+  border-radius: 6%;
+}
+.addresses {
+  width: 55%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+copyright {
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
 }
 .intro {
-  height: 598px;
-  background-image: url(../img/home/home-jumbotron.png);
-  background-size: cover;
-  background-repeat: none;
+  width: 100%;
+  height: 600px;
+  display: flex;
+  align-items: flex-end;
   position: relative;
+  background-image: url('../img/home/home-jumbotron.png');
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.intro .intro-content {
+.intro .intro-text {
   position: absolute;
   bottom: 0;
   left: 0;
   padding: 2%;
 }
-.intro .intro-content h1 {
+.intro .intro-text h1 {
   font-size: 3.5rem;
   font-weight: bold;
   color: white;
 }
-.learn-top {
+.learn--top {
   margin-top: 4%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-}
-.learn-top .top-content {
-  width: 410px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-}
-.learn-top .top-content h3 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-bottom: 4%;
-}
-.learn-top .top-content p {
-  margin-bottom: 4%;
-}
-.learn-top .top-content button {
-  background: white;
-  border: 1px solid black;
-  width: 8rem;
-}
-.learn-bottom {
-  margin-top: 4%;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-around;
-}
-.learn-bottom .bottom-content {
-  width: 410px;
   max-width: 100%;
+  margin-bottom: 4%;
+}
+.learn--top .top--content {
+  width: 410px;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
-.learn-bottom .bottom-content h3 {
+.learn--top .top--content h3 {
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 4%;
 }
-.learn-bottom .bottom-content p {
+.learn--top .top--content p {
   margin-bottom: 4%;
 }
-.learn-bottom .bottom-content button {
+.learn--top .top--content button {
   background: white;
   border: 1px solid black;
   width: 8rem;
+  height: 3rem;
 }
-.recent-projects {
-  margin-top: 8%;
-  height: 230px;
+.learn--top .top--content img {
+  width: 410px;
 }
-.recent-projects h2 {
+.learn--bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 0 auto;
+}
+.learn--bottom .bottom--content {
+  width: 410px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+.learn--bottom .bottom--content h3 {
   font-size: 1.5rem;
   font-weight: bold;
-}
-.recent-projects .villas {
-  height: 100%;
-  margin-top: 4%;
-  background-image: url(../img/home/home-villas-img.png);
-  background-size: cover;
-  background-repeat: none;
-  position: relative;
   margin-bottom: 4%;
-  border: 1px solid red;
 }
-.recent-projects .villas .square {
-  position: absolute;
-  bottom: 0;
-  right: 0;
+.learn--bottom .bottom--content p {
+  margin-bottom: 4%;
+}
+.learn--bottom .bottom--content button {
+  background: white;
   border: 1px solid black;
-  align-content: baseline;
+  width: 8rem;
+  height: 3rem;
 }
-.recent-projects .villa-description {
-  margin: 0 auto;
-  width: 50%;
+.learn--bottom .bottom--content img {
+  width: 410px;
 }
-.recent-projects h2 {
+.outskirts {
+  margin-bottom: 6%;
+}
+.outskirts h2 {
   font-size: 1.5rem;
   font-weight: bold;
+  margin-bottom: 4%;
 }
-.recent-projects .outskirts {
-  height: 100%;
-  margin-top: 4%;
-  background-image: url(../img/home/home-outskirts-img.png);
+.outskirts .project-img {
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: flex-start;
+  background-image: url('../img/home/home-outskirts-img.png');
   background-size: cover;
   background-repeat: none;
-  position: relative;
-  margin-bottom: 4%;
-  border: 1px solid red;
+  margin-bottom: 8%;
 }
-.recent-projects .outskirts .square {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  border: 1px solid black;
-  align-content: baseline;
+.outskirts .project-name {
+  display: flex;
+  align-items: flex-end;
 }
-.recent-projects .outskirts-description {
+.outskirts .project-name h3 {
+  z-index: 1;
+  width: 260px;
+  padding: 2.3rem 5.25%;
+  margin-bottom: -40px;
+  text-align: center;
+  font-size: 1.8rem;
+  line-height: 1.8rem;
+  background-color: #DDDDDD;
+}
+.outskirts .project-text {
   margin: 0 auto;
   width: 50%;
+  font-size: 1.2rem;
 }
-.recent-projects h2 {
+.villas {
+  margin: 6% 2%;
+}
+.villas h2 {
   font-size: 1.5rem;
   font-weight: bold;
+  margin-bottom: 4%;
 }
-.recent-projects .blocks {
-  height: 100%;
-  margin-top: 4%;
-  background-image: url(../img/home/home-the-blocks-img.png);
+.villas .project-img {
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: flex-end;
+  background-image: url('../img/home/home-villas-img.png');
   background-size: cover;
   background-repeat: none;
-  position: relative;
-  margin-bottom: 4%;
-  border: 1px solid red;
+  margin-bottom: 8%;
 }
-.recent-projects .blocks .square {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  border: 1px solid black;
-  align-content: baseline;
+.villas .project-name {
+  display: flex;
+  align-items: flex-end;
 }
-.recent-projects .blocks-description {
+.villas .project-name h3 {
+  z-index: 1;
+  width: 260px;
+  padding: 2.3rem 0;
+  margin-bottom: -40px;
+  text-align: center;
+  font-size: 1.8rem;
+  line-height: 1.8rem;
+  background-color: #DDDDDD;
+}
+.villas .project-text {
   margin: 0 auto;
   width: 50%;
+  font-size: 1.2rem;
+}
+.blocks {
+  margin: 6% 2%;
+}
+.blocks h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 4%;
+}
+.blocks .project-img {
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: flex-end;
+  background-image: url('../img/home/home-the-blocks-img.png');
+  background-size: cover;
+  background-repeat: none;
+  margin-bottom: 8%;
+}
+.blocks .project-name {
+  display: flex;
+  align-items: flex-end;
+}
+.blocks .project-name h3 {
+  z-index: 1;
+  width: 260px;
+  padding: 2.3rem 5.25%;
+  margin-bottom: -40px;
+  text-align: center;
+  font-size: 1.8rem;
+  line-height: 1.8rem;
+  background-color: #DDDDDD;
+}
+.blocks .project-text {
+  margin: 0 auto;
+  width: 50%;
+  font-size: 1.2rem;
 }
