started from scratch, finished desktop home page

--- a/less/index.less
+++ b/less/index.less
@@ -1,16 +1,8 @@
-// Variables and Mixins
-// @import 'variables.less';
-// @import 'mixins.less';
 
-// Reset and Global Styles
 @import 'reset.less';
-// @import 'global.less';
 
-// Reusable Components;
 @import 'navigation.less';
 @import 'footer.less';
 
-// Page Specific
+// Pages
 @import 'home.less';
-// @import 'services.less';
-// @import 'contact.less';
