--- a/css/index.css
+++ b/css/index.css
@@ -90,6 +90,7 @@ video {
   font-size: 62.5%;
   font: inherit;
   vertical-align: baseline;
+  font-family: 'Roboto', sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -109,6 +110,11 @@ body {
   line-height: 1;
   max-width: 880px;
   margin: 0 auto;
+}
+@media (max-width: 540px) {
+  body {
+    width: 100%;
+  }
 }
 ol,
 ul {
@@ -165,6 +171,11 @@ footer {
   flex-direction: column;
   color: white;
 }
+@media (max-width: 540px) {
+  footer {
+    align-items: center;
+  }
+}
 footer h4 {
   font-size: 1.4rem;
   font-weight: bold;
@@ -174,8 +185,19 @@ footer .footer {
   flex-direction: row;
   justify-content: space-between;
 }
+@media (max-width: 540px) {
+  footer .footer {
+    flex-direction: column;
+  }
+}
 footer .contact {
   width: 40%;
+}
+@media (max-width: 540px) {
+  footer .contact {
+    width: 100%;
+    margin: 0 auto;
+  }
 }
 footer input {
   width: 80%;
@@ -184,6 +206,12 @@ footer input {
   margin: 10px 0;
   border-radius: 6%;
 }
+@media (max-width: 540px) {
+  footer input {
+    width: 80%;
+    margin: 10 auto;
+  }
+}
 .addresses {
   width: 55%;
   display: flex;
@@ -191,10 +219,26 @@ footer input {
   justify-content: space-between;
   align-items: center;
 }
+@media (max-width: 540px) {
+  .addresses {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin: 4% 0;
+  }
+  .addresses h4 {
+    margin-top: 6%;
+  }
+}
 copyright {
   display: flex;
   justify-content: center;
   padding-top: 20px;
+}
+@media (max-width: 540px) {
+  copyright {
+    justify-content: flex-start;
+  }
 }
 .intro {
   width: 100%;
@@ -205,6 +249,12 @@ copyright {
   background-image: url('../img/home/home-jumbotron.png');
   background-repeat: no-repeat;
   background-size: cover;
+}
+@media (max-width: 540px) {
+  .intro {
+    height: 300px;
+    margin-bottom: 4%;
+  }
 }
 .intro .intro-text {
   position: absolute;
@@ -225,11 +275,21 @@ copyright {
   max-width: 100%;
   margin-bottom: 4%;
 }
+@media (max-width: 540px) {
+  .learn--top {
+    flex-wrap: wrap;
+  }
+}
 .learn--top .top--content {
   width: 410px;
   display: flex;
   justify-content: center;
   flex-direction: column;
+}
+@media (max-width: 540px) {
+  .learn--top .top--content {
+    order: 1;
+  }
 }
 .learn--top .top--content h3 {
   font-size: 1.5rem;
@@ -238,6 +298,7 @@ copyright {
 }
 .learn--top .top--content p {
   margin-bottom: 4%;
+  font-size: 1.2rem;
 }
 .learn--top .top--content button {
   background: white;
@@ -245,14 +306,29 @@ copyright {
   width: 8rem;
   height: 3rem;
 }
+@media (max-width: 540px) {
+  .learn--top .top--content button {
+    width: 100%;
+  }
+}
 .learn--top .top--content img {
   width: 410px;
+}
+@media (max-width: 540px) {
+  .learn--top .top--content img {
+    justify-content: center;
+  }
 }
 .learn--bottom {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   margin: 0 auto;
+}
+@media (max-width: 540px) {
+  .learn--bottom {
+    flex-wrap: wrap;
+  }
 }
 .learn--bottom .bottom--content {
   width: 410px;
@@ -267,6 +343,7 @@ copyright {
 }
 .learn--bottom .bottom--content p {
   margin-bottom: 4%;
+  font-size: 1.2rem;
 }
 .learn--bottom .bottom--content button {
   background: white;
@@ -274,8 +351,68 @@ copyright {
   width: 8rem;
   height: 3rem;
 }
+@media (max-width: 540px) {
+  .learn--bottom .bottom--content button {
+    width: 100%;
+  }
+}
 .learn--bottom .bottom--content img {
   width: 410px;
+}
+@media (max-width: 540px) {
+  .learn--bottom .bottom--content img {
+    margin: 10% auto;
+  }
+}
+.villas {
+  margin: 6% 2%;
+}
+.villas h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 4%;
+}
+@media (max-width: 540px) {
+  .villas h2 {
+    margin-bottom: 4%;
+  }
+}
+.villas .project-img {
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: flex-end;
+  background-image: url('../img/home/home-villas-img.png');
+  background-size: cover;
+  background-repeat: none;
+  margin-bottom: 8%;
+}
+.villas .project-name {
+  display: flex;
+  align-items: flex-end;
+}
+.villas .project-name h3 {
+  z-index: 1;
+  width: 260px;
+  padding: 2.3rem 0;
+  margin-bottom: -40px;
+  text-align: center;
+  font-size: 1.8rem;
+  line-height: 1.8rem;
+  background-color: #DDDDDD;
+  letter-spacing: 4px;
+  justify-content: center;
+}
+@media (max-width: 540px) {
+  .villas .project-name h3 {
+    display: flex;
+    justify-content: center;
+  }
+}
+.villas .project-text {
+  margin: 0 auto;
+  width: 50%;
+  font-size: 1.2rem;
 }
 .outskirts {
   margin-bottom: 6%;
@@ -308,45 +445,10 @@ copyright {
   font-size: 1.8rem;
   line-height: 1.8rem;
   background-color: #DDDDDD;
+  letter-spacing: 4px;
+  justify-content: center;
 }
 .outskirts .project-text {
-  margin: 0 auto;
-  width: 50%;
-  font-size: 1.2rem;
-}
-.villas {
-  margin: 6% 2%;
-}
-.villas h2 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-bottom: 4%;
-}
-.villas .project-img {
-  width: 100%;
-  height: 250px;
-  display: flex;
-  justify-content: flex-end;
-  background-image: url('../img/home/home-villas-img.png');
-  background-size: cover;
-  background-repeat: none;
-  margin-bottom: 8%;
-}
-.villas .project-name {
-  display: flex;
-  align-items: flex-end;
-}
-.villas .project-name h3 {
-  z-index: 1;
-  width: 260px;
-  padding: 2.3rem 0;
-  margin-bottom: -40px;
-  text-align: center;
-  font-size: 1.8rem;
-  line-height: 1.8rem;
-  background-color: #DDDDDD;
-}
-.villas .project-text {
   margin: 0 auto;
   width: 50%;
   font-size: 1.2rem;
@@ -382,6 +484,8 @@ copyright {
   font-size: 1.8rem;
   line-height: 1.8rem;
   background-color: #DDDDDD;
+  letter-spacing: 4px;
+  justify-content: center;
 }
 .blocks .project-text {
   margin: 0 auto;
