--- a/less/footer.less
+++ b/less/footer.less
@@ -5,6 +5,10 @@ footer {
     flex-direction: column;
     color: white;
 
+    @media (max-width: 540px) {
+        align-items: center;
+    }
+
     h4 {
         font-size: 1.4rem;
         font-weight: bold;
@@ -13,10 +17,19 @@ footer {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+
+        @media (max-width: 540px) {
+            flex-direction: column;
+        }
     }
 
     .contact {
         width: 40%;
+
+        @media (max-width: 540px) {
+            width: 100%;
+            margin: 0 auto;
+        }
     }
 
     input {
@@ -26,6 +39,10 @@ footer {
         margin: 10px 0;
         border-radius: 6%;
         
+        @media (max-width: 540px) {
+            width: 80%;
+            margin: 10 auto;
+        }
     }
 }
 
@@ -36,6 +53,17 @@ footer {
     justify-content: space-between;
     align-items: center;
 
+    @media (max-width: 540px) {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin: 4% 0;
+
+    h4 {
+        margin-top: 6%;
+    }
+}
+
 
 }
 
@@ -43,4 +71,8 @@ copyright {
     display: flex;
     justify-content: center;
     padding-top: 20px;
+
+    @media (max-width: 540px) {
+        justify-content: flex-start;
+    }
 }
