--- a/less/home.less
+++ b/less/home.less
@@ -1,5 +1,7 @@
 
 // Intro
+
+
 .intro {
     width: 100%;
     height: 600px;
@@ -11,12 +13,17 @@
     background-repeat: no-repeat;
     background-size: cover;
 
+    @media (max-width: 540px) {
+        height: 300px;
+        margin-bottom: 4%;
+    }
+
     .intro-text {
         position: absolute;
         bottom: 0;
         left: 0;
         padding: 2%;
-    
+
         h1 {
             font-size: 3.5rem;
             font-weight: bold;
@@ -33,11 +40,20 @@
     max-width: 100%;
     margin-bottom: 4%;
 
+    @media (max-width: 540px) {
+        flex-wrap: wrap;
+    }
+
     .top--content {
         width: 410px;
         display: flex;
         justify-content: center;
         flex-direction: column;
+
+        @media (max-width: 540px) {
+            order: 1;
+         }
+
 
         h3 {
             font-size: 1.5rem;
@@ -47,6 +63,8 @@
 
         p {
             margin-bottom: 4%;
+            font-size: 1.2rem;
+      
         }
 
         button {
@@ -54,10 +72,16 @@
             border: 1px solid black;
             width: 8rem;
             height: 3rem;
+            @media (max-width: 540px) {
+                width: 100%;
+            }
         }
 
         img {
             width: 410px;
+            @media (max-width: 540px) {
+                justify-content: center;
+            }
         }
     }
 }
@@ -67,6 +91,10 @@
     flex-direction: row;
     justify-content: space-around;
     margin: 0 auto;
+
+        @media (max-width: 540px) {
+        flex-wrap: wrap;
+    }
 
     .bottom--content {
         width: 410px;
@@ -82,6 +110,7 @@
 
         p {
             margin-bottom: 4%;
+            font-size: 1.2rem;
         }
 
         button {
@@ -89,14 +118,76 @@
             border: 1px solid black;
             width: 8rem;
             height: 3rem;
+            @media (max-width: 540px) {
+                width: 100%;
+            }
         }
 
         img {
             width: 410px;
+            @media (max-width: 540px) {
+                margin: 10% auto;
+            }
         }
     }
 }
 
+// Villas
+.villas {
+    margin: 6% 2%;
+
+    h2 {
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin-bottom: 4%;
+        @media (max-width: 540px) {
+            margin-bottom: 4%;
+        }
+    }
+
+    .project-img {
+        width: 100%;
+        height: 250px;
+        display: flex;
+        justify-content: flex-end;
+        background-image: url('./../img/home/home-villas-img.png');
+        background-size: cover;
+        background-repeat: none;
+        margin-bottom: 8%;
+    }
+
+    .project-name {
+        display: flex;
+        align-items: flex-end;
+
+        h3 {
+            z-index: 1;
+            width: 260px;
+            padding: 2.3rem 0;
+            margin-bottom: -40px;
+            text-align: center;
+            font-size: 1.8rem;
+            line-height: 1.8rem;
+            background-color: #DDDDDD;
+            letter-spacing: 4px;
+            justify-content: center;
+
+
+            @media (max-width: 540px) {
+                display: flex;
+                justify-content: center;
+            }
+        }
+    }
+
+    .project-text {
+        margin: 0 auto;
+        width: 50%;
+        font-size: 1.2rem;
+    }
+}
+
+// Outskirts
 .outskirts {
     margin-bottom: 6%;
 
@@ -130,49 +221,8 @@
             font-size: 1.8rem;
             line-height: 1.8rem;
             background-color: #DDDDDD;
-        }
-    }
-
-    .project-text {
-        margin: 0 auto;
-        width: 50%;
-        font-size: 1.2rem;
-    }
-}
-
-.villas {
-    margin: 6% 2%;
-
-    h2 {
-        font-size: 1.5rem;
-        font-weight: bold;
-        margin-bottom: 4%;
-    }
-
-    .project-img {
-        width: 100%;
-        height: 250px;
-        display: flex;
-        justify-content: flex-end;
-        background-image: url('./../img/home/home-villas-img.png');
-        background-size: cover;
-        background-repeat: none;
-        margin-bottom: 8%;
-    }
-
-    .project-name {
-        display: flex;
-        align-items: flex-end;
-
-        h3 {
-            z-index: 1;
-            width: 260px;
-            padding: 2.3rem 0;
-            margin-bottom: -40px;
-            text-align: center;
-            font-size: 1.8rem;
-            line-height: 1.8rem;
-            background-color: #DDDDDD;
+            letter-spacing: 4px;
+            justify-content: center;
         }
     }
 
@@ -216,6 +266,8 @@
             font-size: 1.8rem;
             line-height: 1.8rem;
             background-color: #DDDDDD;
+            letter-spacing: 4px;
+            justify-content: center;            
         }
     }
 
