--- a/less/reset.less
+++ b/less/reset.less
@@ -23,6 +23,7 @@ time, mark, audio, video {
 	font-size: 62.5%;
 	font: inherit;
 	vertical-align: baseline;
+	font-family: 'Roboto', sans-serif;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -32,7 +33,11 @@ footer, header, hgroup, menu, nav, section {
 body {
     line-height: 1;
     max-width: 880px;
-    margin: 0 auto;
+	margin: 0 auto;
+	
+	@media (max-width: 540px) {
+		width: 100%;
+	}
 }
 ol, ul {
 	list-style: none;
