services page finished

--- a/less/home.less
+++ b/less/home.less
@@ -171,12 +171,6 @@
             background-color: #DDDDDD;
             letter-spacing: 4px;
             justify-content: center;
-
-
-            @media (max-width: 540px) {
-                display: flex;
-                justify-content: center;
-            }
         }
     }
 
@@ -233,6 +227,7 @@
     }
 }
 
+// Blocks
 .blocks {
     margin: 6% 2%;
 
