--- a/css/index.css
+++ b/css/index.css
@@ -204,11 +204,11 @@ footer input {
   height: 30px;
   padding: 5px 0;
   margin: 10px 0;
-  border-radius: 6%;
+  border-radius: 4%;
 }
 @media (max-width: 540px) {
   footer input {
-    width: 80%;
+    max-width: 100%;
     margin: 10 auto;
   }
 }
@@ -403,12 +403,6 @@ copyright {
   letter-spacing: 4px;
   justify-content: center;
 }
-@media (max-width: 540px) {
-  .villas .project-name h3 {
-    display: flex;
-    justify-content: center;
-  }
-}
 .villas .project-text {
   margin: 0 auto;
   width: 50%;
@@ -491,4 +485,65 @@ copyright {
   margin: 0 auto;
   width: 50%;
   font-size: 1.2rem;
+}
+.services--intro {
+  width: 100%;
+  height: 250px;
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+  background-image: url('../img/services/services-jumbotron.png');
+  background-repeat: none;
+  background-size: cover;
+}
+.services--intro .intro--text {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  padding: 2%;
+}
+.services--intro .intro--text h1 {
+  font-size: 3.5rem;
+  font-weight: bold;
+  color: white;
+}
+.services--about {
+  margin: 4% 0;
+  padding: 0 2%;
+}
+.button-container {
+  padding: 0 2%;
+  display: flex;
+  justify-content: space-between;
+}
+.button-container .services--btn {
+  background: white;
+  border: 1px solid black;
+  width: 8rem;
+  height: 3rem;
+  font-weight: bold;
+}
+.services-container {
+  padding: 0 2%;
+  margin: 4% auto;
+}
+.services-container h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 4%;
+}
+.services-container .services--card {
+  display: none;
+}
+.services-container .active--card {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  max-width: 100%;
+}
+.services-container .active--card .services--text {
+  width: 410px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
