--- a/less/footer.less
+++ b/less/footer.less
@@ -37,10 +37,10 @@ footer {
         height: 30px;
         padding: 5px 0;
         margin: 10px 0;
-        border-radius: 6%;
+        border-radius: 4%;
         
         @media (max-width: 540px) {
-            width: 80%;
+            max-width: 100%;
             margin: 10 auto;
         }
     }
