--- a/less/services.less
+++ b/less/services.less
@@ -40,6 +40,11 @@
         height: 3rem;
         font-weight: bold;
     }
+
+    .btn-active {
+        background: #5E9EB8;
+        color: white;
+    }
 }
 
 .services-container {
