--- a/css/index.css
+++ b/css/index.css
@@ -138,31 +138,64 @@ table {
 a {
   text-decoration: none;
 }
-.nav {
+.navigation {
   width: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  padding: 2% 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #979CA1;
-  padding: 2%;
-  color: white;
+  background: #939aa4;
+  z-index: 6;
 }
-.nav h2 {
+.navigation .logo {
   font-weight: bold;
   font-size: 1.8rem;
-}
-.nav a {
   color: white;
+  padding-left: 2rem;
+  width: 100%;
 }
-.nav nav {
+.nav {
+  z-index: 3;
+  position: relative;
+  right: 3%;
+  bottom: -5px;
+  cursor: pointer;
+}
+.nav .nav-button {
+  padding: 15px;
+}
+.nav .nav-content {
+  width: 880px;
+  height: 100%;
+  position: fixed;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background-color: #939aa4;
+  opacity: 0.8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.nav .nav-link {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-size: 2.8rem;
+  font-weight: bold;
+  line-height: 6rem;
+  text-decoration: none;
+  color: #ffffff;
+}
+.nav .nav-link:hover {
+  color: #534A4A;
+}
+.nav .nav-hidden {
   display: none;
-}
-.nav .nav-btn {
-  width: 3.2rem;
-  height: 2.1rem;
-  background-image: url('../img/nav-hamburger.png');
-  background-repeat: none;
-  background-size: cover;
 }
 footer {
   background-color: #818181;
