--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,30 +1,61 @@
-.nav {
+.navigation {
     width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+    padding: 2% 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #979CA1;
-    padding: 2%;
-    color: white;
-
-    h2 {
+    background: #939aa4;
+    z-index: 6;
+    .logo {
         font-weight: bold;
         font-size: 1.8rem;
-    }
-
-    a {
         color: white;
+        padding-left: 2rem;
+        width: 100%;
+    }
+}
+.nav {
+    z-index: 3;
+    position: relative;
+    right: 3%;
+    bottom: -5px;
+    cursor: pointer;
+    .nav-button {
+        padding: 15px;
     }
 
-    nav {
+    .nav-content {
+        width: 880px;
+        height: 100%;
+        position: fixed;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
+        background-color: #939aa4;
+        opacity: .8;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+    }
+    .nav-link {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        font-size: 2.8rem;
+        font-weight: bold;
+        line-height: 6rem;
+        text-decoration: none;
+        color: #ffffff;
+        &:hover {
+           color: #534A4A;
+        }
+    }
+    .nav-hidden {
         display: none;
-    }
-
-    .nav-btn {
-        width: 3.2rem;
-        height: 2.1rem;
-        background-image: url('./../img/nav-hamburger.png');
-        background-repeat: none;
-        background-size: cover;
     }
 }
