--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,8 +1,6 @@
 .navigation {
     width: 100%;
     position: relative;
-    top: 0;
-    left: 0;
     padding: 2% 0;
     display: flex;
     justify-content: space-between;
@@ -35,7 +33,7 @@
         -webkit-transform: translateX(-50%);
         transform: translateX(-50%);
         background-color: #939aa4;
-        opacity: .8;
+        opacity: 0.8;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -52,7 +50,7 @@
         text-decoration: none;
         color: #ffffff;
         &:hover {
-           color: #534A4A;
+            color: #534A4A;
         }
     }
     .nav-hidden {
