--- a/less/home.less
+++ b/less/home.less
@@ -159,6 +159,10 @@
     .project-name {
         display: flex;
         align-items: flex-end;
+        @media (max-width: 540px) {
+            margin: 0 auto;
+            margin-bottom: 4%;
+        }
 
         h3 {
             z-index: 1;
@@ -206,6 +210,11 @@
         display: flex;
         align-items: flex-end;
 
+        @media (max-width: 540px) {
+            margin: 0 auto;
+            margin-bottom: 4%;
+        }
+
         h3 {
             z-index: 1;
             width: 260px;
@@ -251,6 +260,10 @@
     .project-name {
         display: flex;
         align-items: flex-end;
+        @media (max-width: 540px) {
+            margin: 0 auto;
+            margin-bottom: 4%;
+        }
 
         h3 {
             z-index: 1;
